# centinela-agent

./: .env.example  .gitignore  AGENTS.md  README.md  config.py  pyproject.toml  requirements.txt
containers/: Containerfile.bot
docs/: index.md  status.md
docs/artifacts/in/: product_def.md
docs/logbooks/: 2026-05-08.md  2026-05-10.md  2026-07-15.md
scripts/: check_vllm.sh  deploy-bot.sh  deploy-demo.sh  start_vllm.sh  stop_vllm.sh
src/: __main__.py  demo_server.py
src/app/domain/: entities.py  inspection_schema.py
src/app/ports/: admin_whitelist_repository.py  assistant_repository.py  clock.py  clustering_engine.py  history_repository.py  human_review_repository.py  image_embedder.py  image_processor.py  inspection_repository.py  llm_inspector.py  project_repository.py  queue_repository.py  report_generator.py  telegram_gateway.py  user_repository.py
src/app/services/: finish_project.py  handle_hitl_response.py  ingest_message.py  ingest_photo.py  process_queue_item.py  prompt.py  register_floorplan.py  start_project.py
src/ext/controllers/: demo_api.py  queue_worker.py  telegram_bot.py
src/ext/providers/: greedy_clustering_engine.py  in_memory_image_gateway.py  (+6 more)
tests/fakes/: fake_clock.py  fake_clustering_engine.py  fake_history_repository.py  fake_human_review_repository.py  fake_image_embedder.py  fake_image_processor.py  fake_inspection_repository.py  fake_llm_inspector.py  fake_project_repository.py  fake_queue_repository.py  fake_report_generator.py  fake_telegram_gateway.py  fake_user_repository.py
tests/unit/: test_services.py
(+12 files in other folders)
